# robot_grinding_testbed_ros2

./: LICENSE  README.md  Robotic-Grinding-Testbed.json
rgt_examples/: package.xml  setup.cfg  setup.py
rgt_examples/rgt_examples/: move_till_force.py  tool_change_example.py
rgt_interfaces/: CMakeLists.txt  package.xml
rgt_interfaces/srv/: ChangeTool.srv  OverrideToolLocation.srv  ReturnTool.srv  TakeTool.srv
rgt_manager/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rgt_manager/config/: config.yaml
rgt_manager/meshes/: gelsight_vision.glb  grinder.glb  nex10_tc_master.glb  sander.glb  table.glb  tray.glb  ur20_tc_master.glb
rgt_manager/rgt_manager/: rgt_manager.py
rgt_manager/scripts/: find_tray_reference.py  find_world_reference.py  spacemouse.py  test_tray_reference.py
rgt_manager/src/: rgt_manager.py
rgt_manager/urdf/: rgt.urdf
rgt_scripts/: package.xml  setup.cfg  setup.py
rgt_scripts/rgt_scripts/: find_tray_reference.py  find_world_reference.py  spacemouse.py
